@@ -20,6 +20,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.37  2004/11/21 14:30:55  jimmyo
+# Added new field option "line", which draws HRULEs.
+#
 # Revision 1.36  2004/11/19 23:01:46  jimmyo
 # Fixed irqstats plugin so it doesn't use numbers as field names. Also expanded the label if possible, since munin-graph now handles long labels.
 #
@@ -943,10 +946,22 @@ sub process_node {
 		push (@rrd_negatives, ($node->{client}->{$service}->{$negfield.".draw"} || "LINE2") .
 		    ":ng$negfield" . 
 		    ((defined $single_value and $single_value) ? $single_colour : $COLOUR[($col_count-1)%@COLOUR]));
-		push (@rrd_negatives, "HRULE:".$node->{client}->{$service}->{"$negfield.warn"}.
-		    ((defined $single_value and $single_value) ? "#ff0000" : $COLOUR[($col_count-1)%@COLOUR]))
-		    if $node->{client}->{$service}->{"$negfield.warn"};
-		# Special case - renamed field
+
+		# Draw HRULEs
+		my $linedef = munin_get_val ($config, "line", undef, $domain, $name, $service, $node->{client}->{$service}->{$field.".negative"});
+		if ($linedef)
+		{
+		    my ($number, $colour, $label) = split (/:/, $linedef, 3);
+		    push (@rrd_negatives, "HRULE:".$number.
+			($colour ? "#$colour" :
+			  ((defined $single_value and $single_value) ? "#ff0000" : $COLOUR[($col_count-1)%@COLOUR]))
+			);
+		}
+		elsif ($node->{client}->{$service}->{"$negfield.warn"})
+		{
+		    push (@rrd_negatives, "HRULE:".$node->{client}->{$service}->{$node->{client}->{$service}->{$field.".negative"}.".warn"}.
+			((defined $single_value and $single_value) ? "#ff0000" : $COLOUR[($col_count-1)%@COLOUR]));
+		}
 
 		push (@rrd, "GPRINT:c$negfield:LAST:%6.2lf" . (munin_get_bool_val ($node->{client}->{$service}->{graph_scale}, 1)?"%s":"") . "/\\g");
 		push (@rrd, "GPRINT:c$rrdname:LAST:%6.2lf" . (munin_get_bool_val ($node->{client}->{$service}->{graph_scale}, 1)?"%s":"") . "");
@@ -979,8 +994,23 @@ sub process_node {
 	    }
 
 
-	    push (@rrd, "HRULE:".$node->{client}->{$service}->{"$field.warn"}.($single_value ? "#ff0000" : $COLOUR[($col_count-1)%@COLOUR]))
-		if $node->{client}->{$service}->{"$field.warn"};
+	    # Draw HRULEs
+	    my $linedef = munin_get_val ($config, "line", undef, $domain, $name, $service, $field);
+	    if ($linedef)
+	    {
+		my ($number, $colour, $label) = split (/:/, $linedef, 3);
+		$label =~ s/:/\\:/g if defined $label;
+		push (@rrd, "HRULE:".$number.
+		    ($colour ? "#$colour" :
+		      ((defined $single_value and $single_value) ? "#ff0000" : $COLOUR[($col_count-1)%@COLOUR])) .
+		      ((defined $label and length ($label)) ? ":$label" : ""), 
+		      "COMMENT: \\j"
+		    );
+	    }
+	    elsif ($node->{client}->{$service}->{"$field.warn"})
+	    {
+		push (@rrd, "HRULE:".$node->{client}->{$service}->{"$field.warn"}.($single_value ? "#ff0000" : $COLOUR[($col_count-1)%@COLOUR]));
+	    }
 	}
 
 	if (@rrd_negatives)
